PostCard. Fix footer alignment

--- a/resources/css/components/dashboard/post-card.pcss
+++ b/resources/css/components/dashboard/post-card.pcss
@@ -16,11 +16,11 @@
     }
 
     .post-card__footer {
-        @apply flex justify-between items-end gap-4;
+        @apply flex justify-between items-start gap-4;
     }
 
     .post-card__icon {
-        @apply flex items-center justify-center w-10 h-10 p-[11px] rounded-full border border-current;
+        @apply flex items-center justify-center mt-5 w-10 h-10 p-[11px] rounded-full border border-current;
     }
 
     .post-card__heading {
